Add Admin Portal tab with Security Key authentication and CORS updates